--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
   },
   "license": "MIT",
   "dependencies": {
-    "eslint": "^2.10.2",
     "eslint-plugin-import": "^1.8.0",
     "eslint-plugin-jsx-a11y": "^1.2.2",
     "eslint-plugin-react": "^5.1.1",
     "eslint-config-airbnb": "^9.0.1"
+  },
+  "peerDependencies": {
+    "eslint": "^2.10.2"
   },
   "devDependencies": {
     "pre-commit": "^1.1.3"
