--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "eslint *.js",
-    "pre-publish": "test"
+    "prepublish": "npm test"
   },
   "keywords": [
     "eslint",
