--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-lddubeau-base",
-  "version": "1.0.4",
+  "version": "2.0.0",
   "description": "Base eslint configuration for my projects.",
   "main": "index.js",
   "scripts": {
@@ -18,13 +18,13 @@
   },
   "license": "MIT",
   "dependencies": {
-    "eslint-plugin-import": "^1.13.0",
-    "eslint-plugin-jsx-a11y": "^2.1.0",
-    "eslint-plugin-react": "^6.0.0",
-    "eslint-config-airbnb": "^11"
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.6.1"
   },
   "peerDependencies": {
-    "eslint": "^3.16.1"
+    "eslint": "^4"
   },
   "devDependencies": {
     "pre-commit": "^1.1.3"
