Update dependencies and add eslint as a dev dep.
`npm test` used to run fine even without eslint in the dev dependencies, but it
not longer does.

--- a/package.json
+++ b/package.json
@@ -19,15 +19,16 @@
   "license": "MIT",
   "dependencies": {
     "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.6.1"
+    "eslint-plugin-react": "^7.8.2"
   },
   "peerDependencies": {
     "eslint": "^4"
   },
   "devDependencies": {
-    "pre-commit": "^1.1.3"
+    "eslint": "^4.19.1",
+    "pre-commit": "^1.2.2"
   },
   "pre-commit": [
     "test"
