--- a/package.json
+++ b/package.json
@@ -19,16 +19,17 @@
   "license": "MIT",
   "dependencies": {
     "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.1",
-    "eslint-plugin-react": "^7.11.0"
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.12.4"
   },
   "peerDependencies": {
     "eslint": "^5"
   },
   "devDependencies": {
-    "eslint": "^5.3.0",
-    "pre-commit": "^1.2.2"
+    "eslint": "^5.13.0",
+    "pre-commit": "^1.2.2",
+    "renovate-config-lddubeau": "^1.0.0"
   },
   "pre-commit": [
     "test"
