--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "eslint-plugin-react": "^7.13.0"
   },
   "peerDependencies": {
-    "eslint": "^5"
+    "eslint": "^5 || ^6"
   },
   "devDependencies": {
     "eslint": "^5.13.0",
