--- a/package.json
+++ b/package.json
@@ -18,16 +18,21 @@
   },
   "license": "MIT",
   "dependencies": {
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.16.0"
+    "eslint-config-airbnb": "^18.0.1"
   },
   "peerDependencies": {
-    "eslint": "^5 || ^6"
+    "eslint": "^5 || ^6",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prefer-arrow": "^1.1.7",
+    "eslint-plugin-react": "^7.16.0"
   },
   "devDependencies": {
     "eslint": "^6.6.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prefer-arrow": "^1.1.7",
+    "eslint-plugin-react": "^7.16.0",
     "pre-commit": "^1.2.2",
     "renovate-config-lddubeau": "^1.0.0"
   },
